# yet-another-agents-memory

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.MD  BENCHMARK_IMPLEMENTATION.md  DEVLOG.md  Dockerfile  GEMINI.MD  IMPLEMENTATION_COMPLETE.md  Makefile  README.md  check_l2_roundtrip.py  check_tier_collection.py  conftest.py  create_qdrant_index.py  debug_qdrant_dump.py  docker-compose.yml  ensure_episodes_collection.py  graph_store_client.py  knowledge_store_manager.py  manual_l3_store.py  memory_system.py  mypy_report.txt  pyproject.toml  requirements-test.txt  requirements.txt  search_store_client.py  tree.txt  vector_store_client.py
.github/: copilot-instructions.md
.venv-backup-pre-poetry/: pyvenv.cfg
.venv_test/: pyvenv.cfg
benchmarks/: QUICK_REFERENCE.md  README.md
benchmarks/goodai-ltm-benchmark/: .dockerignore  .gitignore  Dockerfile  README.md  evaluate.py  evaluate_all.py  pyproject.toml  requirements.txt  runall_bench.py
benchmarks/goodai-ltm-benchmark/configurations/: mas_300_run.yml  mas_dry_run_5.yml  mas_mixed_100.yml  mas_prospective_10.yml  mas_prospective_2.yml  mas_remote_test.yml  mas_single_test.yml  mas_subset_32k.yml  mas_variant_a_smoke_5.yml  mas_verification_run.yml
benchmarks/goodai-ltm-benchmark/data/persistence/MAS Single Test - 2026-02-07 (Full-Context) - MASFullContextSession - full_context/: session.json
benchmarks/goodai-ltm-benchmark/data/persistence/MAS Single Test - 2026-02-07 (RAG) - MASRAGSession - rag/: session.json
benchmarks/goodai-ltm-benchmark/data/persistence/MAS Single Test - 2026-02-07 - MASFullSession - full/: session.json
benchmarks/goodai-ltm-benchmark/data/persistence/MAS Single Test - Verification - MASFullSession - full/: session.json
benchmarks/goodai-ltm-benchmark/data/persistence/MAS Subset - 32k - MASFullSession - full/: session.json
benchmarks/goodai-ltm-benchmark/data/tests/MAS Single Test - 2026-02-07 (Full-Context)/definitions/: config.yml
benchmarks/goodai-ltm-benchmark/data/tests/MAS Single Test - 2026-02-07 (RAG)/definitions/: config.yml
benchmarks/goodai-ltm-benchmark/data/tests/MAS Single Test - 2026-02-07/definitions/: config.yml
benchmarks/goodai-ltm-benchmark/data/tests/MAS Single Test - Verification/definitions/: config.yml
benchmarks/goodai-ltm-benchmark/data/tests/MAS Subset - 32k/definitions/: config.yml
benchmarks/goodai-ltm-benchmark/data/tests/MAS Subset - 32k/definitions/Prospective Memory/: 1.def.json
benchmarks/goodai-ltm-benchmark/dataset_interfaces/: factory.py  gpt_generated.py  interface.py
benchmarks/goodai-ltm-benchmark/dataset_interfaces/tests/: test_match_evaluation.py
benchmarks/goodai-ltm-benchmark/datasets/: chapterbreak.py  colours.py  conficting_personal_information.py  delayed_recall.py  how_to_think.py  instruction_recall.py  jokes.py  kv.py  locations.py  locations_directions.py  multisessionchat.py  name.py  name_list.py  prospective_memory.py  restaurant.py  sally_ann.py  shopping.py  spy_meeting.py  trigger_response.py
benchmarks/goodai-ltm-benchmark/datasets/test/: test_locations.py
benchmarks/goodai-ltm-benchmark/dev_scripts/: barplot.py  cbtest.py  cbtest_ms.py  diagnose_benchmark.sh  figures.py  gemini.py  migr-reeval.py
benchmarks/goodai-ltm-benchmark/docs/: improvement-plan.md  mypy-fix-plan.md  pymemgpt-analysis.md  visibility-analysis.md  webui-implementation-report-2026-02-07.md
benchmarks/goodai-ltm-benchmark/model_interfaces/: __init__.py  base_ltm_agent.py  charlie_interface.py  cost_estimation.py  gemini_interface.py  groq_interface.py  huggingface_interface.py  human.py  interface.py  length_bias_agent.py  llm_interface.py  ltm_agent_wrapper.py  mas_agents.py  memgpt_interface.py  memgpt_proxy.py  mistral_interface.py  remote_agent.py
benchmarks/goodai-ltm-benchmark/reporting/: __init__.py  comparative_report.py  detailed_report.py  generate.py  generate_all_detailed_reports.py  results.py
benchmarks/goodai-ltm-benchmark/reporting/templates/: comparative_report.html  detailed_report.html
benchmarks/goodai-ltm-benchmark/runner/: config.py  master_log.py  progress.py  run_benchmark.py  run_interactive.py  run_manifest.py  run_single.py  sanitizer.py  scheduler.py  stuck_watchdog.py  turn_metrics.py
benchmarks/goodai-ltm-benchmark/tests/: conftest.py  test_benchmark_v2.py  test_scheduler.py  test_visibility.py
benchmarks/goodai-ltm-benchmark/utils/: constants.py  context.py  data.py  files.py  filling_task.py  indexing.py  json_utils.py  llm.py  math.py  parse_numbered_list.py  text.py  timejump.py  ui.py
benchmarks/goodai-ltm-benchmark/webui/: README.md  presets.json  server.py
benchmarks/goodai-ltm-benchmark/webui/frontend/: package-lock.json  package.json  vite.config.ts
benchmarks/goodai-ltm-benchmark/webui/frontend/src/: App.tsx  styles.css
config/: ciar_config.yaml
docs/: AGENTROUTER_CLEANUP_SUMMARY.md  LLM_PROVIDER_SETUP_COMPLETE.md  LLM_PROVIDER_TESTS.md  LLM_PROVIDER_TEST_RESULTS.md  benchmark_data_dictionary.md  benchmark_sequence_diagrams.md  benchmark_use_cases.md  concept-01-benchmark-v2.md  concept-02-memory-inspector.md  dd-01.md  dd-02.md  dd-03.md  dev-quickstart.md  environment-guide.md  implementation_complete.md  lessons-learned.md  llm_provider_guide.md  python-3.13-compatibility.md  python-environment-setup.md  python_environment.md  sd-02.md  sd-03.md  seq-diag-01.md  uc-01.md  uc-02.md  uc-03.md
examples/: gemini_structured_output_test.md  metrics_demo.py
logs/: README.md  fact_extraction_test.json  mas_full_memory_timeline.jsonl  rate_limiter_full_20260127_170435.jsonl  rate_limiter_full_20260127_172419.jsonl  rate_limiter_full_20260127_173032.jsonl  rate_limiter_full_20260127_174059.jsonl  rate_limiter_full_20260128_190616.jsonl  rate_limiter_full_20260128_192206.jsonl  rate_limiter_full_20260128_192341.jsonl  rate_limiter_full_20260128_193456.jsonl  rate_limiter_full_20260128_193511.jsonl  rate_limiter_full_20260128_194716.jsonl  rate_limiter_full_20260128_202310.jsonl  rate_limiter_full_20260128_202446.jsonl  rate_limiter_full_20260204_094133.jsonl  (+4 more)
src/: server.py
(+413 files in other folders)
